--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.smooth-entry {
+  animation-name: entry;
+  animation-duration: 0.25s;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes entry {
+  0% {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  10% {
+    opacity: 0.1;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  15% {
+    opacity: 0.2;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  25% {
+    opacity: 0.25;
+  }
 
-.read-the-docs {
-  color: #888;
+  35% {
+    opacity: 0.35;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  75% {
+    opacity: 0.75;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
