--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,12 @@
   0% {
       transform: scale(0);
       opacity: 0;
+      border-radius: 100%;
   }
   100% {
       transform: scale(1);
       opacity: 1;
+      border-radius: 0%;
   }
 }
 
